--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 /* Home page styles */
 .hero {
-  background: var(--color-pink);
+  background: var(--color-pink-dark);
   min-height: 70vh;
   display: flex;
   align-items: center;
@@ -22,12 +22,12 @@
   object-fit: cover;
 }
 
-.hero-img-1 { width: 95px; height: 95px; top: 2%; left: 3%; }
-.hero-img-2 { width: 125px; height: 125px; top: 42%; left: 4%; transform: translateY(-50%); }
-.hero-img-3 { width: 88px; height: 88px; bottom: 8%; left: 8%; }
-.hero-img-4 { width: 100px; height: 100px; top: 5%; right: 28%; }
-.hero-img-5 { width: 195px; height: 195px; top: 45%; right: 2%; transform: translateY(-50%); object-position: center left; }
-.hero-img-6 { width: 75px; height: 75px; top: 38%; right: 0; transform: translateX(30%); }
+.hero-img-1 { width: 85px; height: 85px; top: 20.85%; left: 4.4%; }
+.hero-img-2 { width: 256px; height: 256px; top: 30%; left: 13.8%;}
+.hero-img-3 { width: 120px; height: 120px; top: 64.7%; left: 4.4%; }
+.hero-img-4 { width: 160px; height: 160px; top: 20.85%; left: 75.28%; }
+.hero-img-5 { width: 267px; height: 267px; top: 45.8%; left: 60.5%; }
+.hero-img-6 { width: 75px; height: 75px; top: 53.4%; left: 89.6%; }
 
 .hero-content { position: relative; z-index: 1; text-align: center; }
 
